--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
-    "cors": "^2.8.5"
+    "sqlite3": "^5.1.6"
   }
 }
